<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:background="#23283a"
        android:orientation="horizontal"
        android:visibility="visible">

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize=".5"
            android:layout_below="@+id/vibe"
            android:layout_alignRight="@+id/vibe"
            android:layout_alignEnd="@+id/vibe" />

        <ImageView
            android:id="@+id/ProPic"
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            app:srcCompat="@drawable/index" />

        <TextView
            android:id="@+id/vibe"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ProPic"
            android:layout_alignStart="@+id/ProPic"
            android:layout_below="@+id/placeName"
            android:paddingBottom="10dp"
            android:paddingLeft="35dp"
            android:paddingTop="10dp"
            android:text="vibe"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <android.support.design.widget.CheckableImageButton
            android:id="@+id/checkableImageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/vibe"
            android:layout_toRightOf="@+id/vibe"
            app:srcCompat="@drawable/facebook" />

        <android.support.design.widget.CheckableImageButton
            android:id="@+id/checkableImageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/checkableImageButton3"
            android:layout_toRightOf="@+id/checkableImageButton3"
            app:srcCompat="@drawable/instagram" />

        <android.support.design.widget.CheckableImageButton
            android:id="@+id/checkableImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignEnd="@+id/ratingBar"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/ratingBar"
            app:srcCompat="@drawable/twitter" />

        <TextView
            android:id="@+id/viewMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/ratingBar"
            android:layout_toStartOf="@+id/ratingBar"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/placeName"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/checkableImageButton2"
            android:layout_alignRight="@+id/checkableImageButton2"
            android:layout_below="@+id/ProPic"
            android:paddingBottom="10dp"
            android:paddingLeft="35dp"
            android:paddingTop="10dp"
            android:text="        PLACE NAME"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"

        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_above="@+id/comment"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sendRateBtn" />

        <EditText
            android:id="@+id/editText2"
            style="@android:style/Widget.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/comment"
            android:layout_toStartOf="@+id/comment"
            android:ems="10"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <Button
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/buttonstyle"
            android:text="comment"
            android:textColor="@android:color/white" />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize=".5"
            android:layout_below="@+id/textView"
            android:layout_toLeftOf="@+id/comment"
            android:layout_centerHorizontal="true"
            android:layout_toStartOf="@+id/comment" />

        <Button
            android:id="@+id/sendRateBtn"
            android:text="Rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBar2"
            android:onClick="sendRate"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rate this place"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</LinearLayout>




