...
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"/>

            <EditText
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
               android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="PASSWORD"
                android:inputType="textPassword"/>
            <TextView
                android:textColor="@color/red"
...
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <Button
                android:id="@+id/login"
                android:layout_marginTop="25dp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:text="@string/login"
                android:textColor="@color/colorLight"/>
...
